--- a/ntuvars.tex
+++ b/ntuvars.tex
@@ -10,11 +10,12 @@
 % Syntax: \var{English}{Chinese}
 \university{National Taiwan University}{國立臺灣大學}
 \college{College of Electrical Engineering and Computer Science}{電機資訊學院}
-\institute{Department of Computer Science and Information Engineering}{資訊工程學系}
-\title{A Benchmark for Region-of-Interest Detection in Images}{影像中使用者感興趣區域偵測之資料集}
-\author{Tz-Huan Huang}{黃子桓}
-\studentid{R94922044}
-\advisor{Yung-Yu Chuang, Ph.D.}{莊永裕 博士}
-\defenseyear{2007}{96}
-\defensemonth{June}{6}
+\institute{Department of Electrical Engineering}{電機工程學系}
+\title{Real-valued Optimization by Subspace Projection and Multi-armed Bandit Techniques}
+{基於子空間映射與多臂吃角子老虎機技術之\\實數最佳化}
+\author{Chun-Jen Peng}{彭俊人}
+\studentid{R04921039}
+\advisor{Tian-Li Yu, Ph.D.}{于天立 博士}
+\defenseyear{2017}{106}
+\defensemonth{July}{7}
 \defenseday{28}
