--- a/thesis.bib
+++ b/thesis.bib
@@ -1,3 +1,11 @@
+@article{ Kennedy:1995:PSO,
+	title={Ieee int},
+  	author={Kennedy, James and Optimization, R Eberhart Particle Swarm},
+  	booktitle={Conf. on Neural Networks},
+  	volume={4},
+  	year={1995}
+}
+
 @article{ Clerc:2012:SPSO2011,
 	title={Standard particle swarm optimisation},
   	author={Clerc, Maurice},
