--- a/thesis.tex
+++ b/thesis.tex
@@ -11,8 +11,10 @@
 % Additional packages
 \usepackage[vlined, ruled]{algorithm2e}
 \usepackage{multirow}
+\usepackage{amsmath}
 \usepackage{bm}
 \usepackage{lmodern}
+\usepackage{booktabs} % For formal tables
 
 
 % Using the tex-text mapping for ligatures etc.
