modify oral defence date

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,5 +1,6 @@
 \begin{acknowledgementszh}
-感謝\ldots
+感謝徐世曦在我人生苦悶時聽我發牢騷，順到給我許多研究上的建議
+感謝我弟弟彭俊又時常忍受我對研究問題的碎碎念，幫助我釐清思緒\ldots
 \end{acknowledgementszh}
 
 \begin{acknowledgementsen}
