--- a/real-valued_optimization_algorithms.tex
+++ b/real-valued_optimization_algorithms.tex
@@ -108,18 +108,18 @@ l_i(0) &= argmin_{j \in N_i(0)}(f(p_j(0)))
 \end{align*}
 
 
-%The swarm size, denoted as $S$, differs in SPSO 2006 and SPSO 2011.
-%In both SPSO 2006 and SPSO 2007, the initial number of particles $S$ for dimension $D$ is defined as:
-%\begin{displaymath}
-%S = 10 + \lfloor 2\sqrt{D} \rfloor,
-%\end{displaymath}
-%However, emperically, the definition of swarm size in SPSO 2006 is far from optmial swarm size~\cite{Clerc:2012:SPSO2011}.
-%Therefore, in SPSO 2011, the swarm size is suggested as
-The swarm size of SPSO 2011, denoted as $S$, is suggested as
+The swarm size, denoted as $S$, differs in SPSO 2006 and SPSO 2011.
+In both SPSO 2006 and SPSO 2007, the initial number of particles $S$ for dimension $D$ is defined as:
+\begin{displaymath}
+S = 10 + \lfloor 2\sqrt{D} \rfloor,
+\end{displaymath}
+However, emperically, the definition of swarm size in SPSO 2006 is far from optmial swarm size~\cite{Clerc:2012:SPSO2011}.
+Therefore, in SPSO 2011, the swarm size is suggested as
+%The swarm size of SPSO 2011, denoted as $S$, is suggested as
 \begin{displaymath}
 S = 40,
 \end{displaymath}
-yet can also be defined by user~\cite{Clerc:2012:SPSO2011}.
+yet it can also be defined by user~\cite{Clerc:2012:SPSO2011}.
 
 
 \subsection{Velocity update equations}
