--- a/thesis.bib
+++ b/thesis.bib
@@ -48,6 +48,27 @@
     year={2008},
     publisher={Elsevier}
 }
+@article{ Rissanen:1984:Universal,
+    author={Rissanen, Jorma},
+    title={Universal coding, information, prediction, and estimation},
+    journal={IEEE Transactions on Information theory},
+    volume={30},
+    number={4},
+    pages={629--636},
+    year={1984},
+    publisher={IEEE}
+}
+
+@inproceedings{ Kyrgyzov:2007:KMDL,
+    title={Kernel MDL to determine the number of clusters},
+    author={Kyrgyzov, Ivan O and Kyrgyzov, Olexiy O and Ma{\^\i}tre, Henri and Campedel, Marine},
+    booktitle={International Workshop on Machine Learning and Data Mining in Pattern Recognition},
+    pages={203--217},
+    year={2007},
+    organization={Springer}
+}
+
+
 
 @inproceedings{ Christopoulos:05:TJS,
     author = {Charilaos Christopoulos and Athanassios Skodras and Touradj Ebrahimi},
