--- a/thesis.tex
+++ b/thesis.tex
@@ -39,9 +39,9 @@
 
 \makecover
 
-\makecertification
+%\makecertification
 
-\input{acknowledgements}
+%\input{acknowledgements}
 \input{abstract}
 
 \tableofcontents
